src/style/main.scss
@import '/variables';
@import '/_grid';
@import '/_icons';
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:400,700');

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  font-family: 'Open Sans', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  line-height: 160%;
  background-color: $colorBackground;
}

body, h1, h2, h3, h4, h5, h6, p, ol, ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

h1, h2, h3, h4, h5, h6 {
  padding: 0 0 10px;
  line-height: 200%;
  /*box-shadow: 0 0 0 999px #EEE inset;*/
}
h3 { font-size: 22px; }

ol, ul {
  list-style: none;
}

section+section {
  margin-top: 40px;
  padding-top: 40px;
  box-shadow: 0 1px 0 $colorBorder inset;
}
section>button:first-child,
section>.btn:first-child,
section>header>button:first-child,
section>header>.btn:first-child,
.button--lower {
  margin-top: .5rem;
}

img {
  max-width: 100%;
  height: auto;
}

button, .btn, input, button, select, textarea, .input {
  margin: 0 2px 4px 0;
  padding: 8px $inputPaddingHorizontalHigh;
  border: 0;
  line-height: 100%;
  &:last-child, &.float-right:first-child {
    margin-right: 0;
  }
  @media #{$breakpointLow} {
    padding: 6px $inputPaddingHorizontalLow;
  }
}

button, .btn {
  display: inline-block;
  margin-bottom: $padding;
  box-shadow: 0 0 0 1px darken($colorButton,5%) inset,
    1px 1px 0 1px lighten($colorButton,3%) inset,
    0 -2px 8px $colorShade inset;
  background-color: $colorButton;
  //color: #FFF!important;
  color: #FFF;
  text-decoration: none;
  transition: background-color 200ms linear;
  cursor: pointer;
  &:hover {
    background-color: lighten($colorButton,5%);
  }
  &:focus {
    box-shadow: 0 0 0 1px darken($colorButton,10%) inset,
      1px 1px 0 1px lighten($colorButton,20%) inset,
      0 -2px 8px $colorShade inset,
      $shadeFlat;
  }
  &[disabled], &[disabled]:hover {
    opacity: 0.3;
    background-color: $colorButton;
    //background-color: mix($colorButton,#888,10%);
  }
  &-sm {
    font-size: 12px;
    padding: 6px;
  }
  &-link {
    background-color: transparent;
    box-shadow: none;
    text-decoration: underline;
    &:hover { background-color: transparent; }
    &:focus { box-shadow: none; }
  }
}

.col {
  .btn, button {
    &:first-child, &:last-child {
      margin-left: 0;
    }
  }
}

input, button, select, textarea, .input {
  font-family: inherit;
  font-size: inherit;
  border-radius: 3px;
  &:focus {
    outline: none;
  }
}

input, textarea {
  border: 0;
  margin-bottom: 4px;
  box-shadow: 0 0 0 1px $colorBorder inset,  0 4px 16px $colorShade inset;
  &[readonly] {
    box-shadow: 0 0 0 1px lighten($colorBorder,20%);
  }
  &:focus {
    box-shadow: 0 0 0 1px $colorButton inset,  0 4px 16px $colorShade inset;
  }
}

textarea {
  width: 100%;
  min-height: 70px;
  line-height: 130%;
}

input {
  width: 100%;
  &[type=radio], &[type=checkbox] {
    width: 16px;
    height: 16px;
  }
  &[type=number] {
    font-family: 'Source Code Pro', monospace;
    &::-webkit-inner-spin-button {
      -webkit-appearance: none;
    }
  }
  &[readonly] {
    font-family: 'Source Code Pro', monospace;
    background: transparent;
  }
  &[type=color] {
    padding: 0;
    width: 2rem;
    display: inline-block;
    margin-right: 0.5em;
  }
  &[type=date] {
    @media #{$breakpointLow} {
      max-width: 100px;
      &::-webkit-clear-button,
      &::-webkit-inner-spin-button,
      &::-webkit-calendar-picker-indicator {
        display: none;
        -webkit-appearance: none;
      }
    }
  }
  &[type=range] {
    position: relative;
    box-shadow: none;
    width: 90%;
    &:after {
      content: attr(data-reflect);
      position: absolute;
      right: -10%;
      top: 8px;
      color: #333;
      font-family: 'Source Code Pro', monospace;
    }
  }
}

.mono { font-family: 'Source Code Pro', monospace; }

[input-unit] {
  position: relative;
  input {
    padding-left: 2*$inputPaddingHorizontalHigh;
    @media #{$breakpointLow} {
      padding-left: 2.4*$inputPaddingHorizontalLow;
    }
  }
  &:after {
    content: attr(input-unit);
    position: absolute;
    top: 45%;
    left: $inputPaddingHorizontalHigh;
    transform: translateY(-50%);
    @extend .mono;
    line-height: 100%;
    @media #{$breakpointLow} {
      left: $inputPaddingHorizontalLow;
    }
  }
  &[input-unit="%"] {
    &:after {
      content: '%';
      left: auto;
      right: $inputPaddingHorizontalHigh;
      @media #{$breakpointLow} { left: auto; }
    }
    input {
      padding-left: $inputPaddingHorizontalHigh;
      @media #{$breakpointLow} {
        padding-left: $inputPaddingHorizontalLow;
      }
    }
  }
}

.btn { @extend .input; }

select {
  padding: 6px 6px;
  border: 1px solid $colorBorder;
  &:focus {
    border: 1px solid $colorButton;
  }
  @media #{$breakpointLow} {
    padding: 4px 6px;
  }
}

a {
  color: $colorLink;
}

table {
  width: 100%;
  border-top: 1px solid $colorBorder;
  border-bottom: 1px solid $colorBorder;
}
thead,tfoot { background-color: $colorTable; }
table, tbody, tfoot, tr, td, th {
  margin:0;
  padding:0;
  border-collapse:collapse;
  border-spacing:0;
}
/*tbody {
  border-top: 2px solid $colorBackground;
}*/
th {
  font-size: 1.1em;
  line-height: 180%;
  font-weight: normal;
  text-align: left;
}
td, th {
  padding: 0 1px;
  &:first-child { padding-left: 0; }
  &:last-child { padding-right: 0; }
}

dl {
  display: flex;
  flex-wrap: wrap;
}
dt {
  flex: 0 0 100%/12*3;
  overflow: hidden;
  text-overflow: ellipsis;
  //@extend .input;
}
dd {
  flex: 0 0 100%/12*9;
  margin: 0;
}

code {
  padding: 0.2rem 0.4rem;
  font-family: 'Source Code Pro', mono;
  font-size: 90%;
  color: #bd4147;
  background-color: #f7f7f9;
  border-radius: 0.25rem;
}

#app {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  >.layout {
    flex: 1;
    >div {
      padding-top: $headerHeight + $padding;
      padding-bottom: $padding;
    }
  }
}

.small, small {
  font-size: 80%;
}

.layout {
  width: 100%;
  max-width: 1024px;
  margin: 0 auto;
  padding: 0 $padding;
}

.visually-hidden {
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  height: 1px; width: 1px;
  margin: -1px; padding: 0; border: 0;
}

.clearfix:after {
  content: '';
  display: block;
  clear: both;
}

.list-inline {
  >li { display: inline-block; }
}

.position-relative { position: relative; }
.float-left { float: left; }
.float-right { float: right; }
.text-align-left { text-align: left; }
.text-align-right { text-align: right; }
.text-align-center { text-align: center; }
.nowrap { white-space: nowrap; }
.overflow-hidden { overflow: hidden; }
.display-flex { display: flex; }

.ellipsis {
  position: relative;
  &:before {
    content: '&nbsp;';
    visibility: hidden;
  }
  > span {
    position: absolute;
    left: 0;
    right: 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

label.checkbox {
  $checkSize: 20px;
  cursor: pointer;
  input {
    @extend .visually-hidden;
  }
  span {
    position: relative;
    display: inline-block;
    width: $checkSize;
    height: $checkSize;
    margin: 1px;
    overflow: hidden;
    background-color: #E0E0E0;
    box-shadow: 0 0 0 1px #bcbcbc;
    border-radius: 2px;
    text-align: center;
    @include icon-mark;
  }
  input+span:before {
    font-size: 16px;
    line-height: $checkSize;
    color: #F8F8F8;
  }
  input:checked+span:before {
      color: $colorButton;
  }
}

@media #{$breakpointLow} { .hide-low { display: none!important; }}
@media #{$breakpointHigh} { .hide-high { display: none!important; }}

[class^="icon-"], [class*=" icon-"] { font-size: 16px; }

.icon-drag {
  cursor: ns-resize;
  color: $colorBlue;
}

.icon-add-round {
  position: relative;
  &:after {
    $size: 10px;
    @include icon-icon();
    content: $icon-add;
    position: absolute;
    right: -6px;
    top: -4px;
    font-size: 7px;
    color: white;
    //width: $size;
    //height: $size;
    //color: $colorButton;
    //background-color: white;
    //border-radius: 50%;
    //font-size: 9px;
    //line-height: $size;
    //box-shadow: 0 0 0 1px $colorButton;
  }
}

//.icon {
//  $size: 16px;
//  &-save {
//    position: relative;
//    width: $size;
//    height: $size;
//    display: inline-block;
//    background-color: #000;
//    border-radius: 1px;
//    background: radial-gradient(circle at 50%, transparent, transparent 20%, #000 20%);
//    background-position: 50%;
//    &:before, &:after {
//      content: '';
//      position: absolute;
//      display: block;
//    }
//    &:before {
//      left: 50%;
//      top: 1px;
//      width: 8px;
//      height: 4px;
//      background-color: #fff;
//      transform: translateX(-50%);
//    }
//    &:after {
//      right: 0;
//      top: 0;
//      border: 1.5px solid #000;
//      border-color: #fff #fff #000 #000;
//    }
//  }
//}

